Add updates for 11/09/24

--- a/consultancy-firm-profile/thebombayconsultancy/index.html
+++ b/consultancy-firm-profile/thebombayconsultancy/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/tbc-tabpic.png" />
+    <link rel="icon" type="image/png" href="./assets/nav/company_logo.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>thebombayconsultancy</title>
+    <title>TheBombayConsultancy</title>
   </head>
   <body>
     <div id="root"></div>
