--- a/consultancy-firm-profile/thebombayconsultancy/index.html
+++ b/consultancy-firm-profile/thebombayconsultancy/index.html
@@ -13,7 +13,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TheBombayConsultancy</title>
+    <title>FJ Consultancy</title>
   </head>
   <body>
     <div id="root"></div>
